# autoware_launch.audiQ8

sensor_kit/audi_sensor_kit_launch/audi_sensor_kit_description/config/: get_calibration.py  sensor_kit_calibration.yaml  sensors_calibration.yaml
vehicle/audi_vehicle_launch/audi_vehicle_description/: CMakeLists.txt  package.xml
vehicle/audi_vehicle_launch/audi_vehicle_description/config/: mirror.param.yaml  simulator_model.param.yaml  vehicle_info.param.yaml
vehicle/audi_vehicle_launch/audi_vehicle_description/urdf/: vehicle.xacro
vehicle/audi_vehicle_launch/audi_vehicle_launch/: CMakeLists.txt  package.xml
