<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>audi_vehicle_launch</name>
  <version>0.47.0</version>
  <description>The audi_vehicle_launch package</description>
  <maintainer email="Chidvilas.Karpenahalli@thi.de">Chidvilas Karpenahalli Ramakrishna</maintainer>
  <maintainer email="Subin.Babu@thi.de">Subin Babu</maintainer>
  <maintainer email="Adithya.Mohan@thi.de">Adithya Mohan</maintainer>
  <license>Apache 2.0 License</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
